# leaf

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  RELEASE.md  compose.yaml  deno.json  jsr.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.cargo/: config.toml
.github/workflows/: api-docs.yaml  build-explorer.yaml  docker-image.yaml
change/: @muni-town-leaf-5c059d7b-f28b-44ca-a860-4a82c65afbe0.json  @muni-town-leaf-76546762-7882-4187-b4db-197f5d3d7786.json  @muni-town-leaf-b599460a-35e4-420a-8c2f-e88bbcd859c3.json  @muni-town-leaf-cef8684b-738d-40eb-a14c-558605e5845a.json  @muni-town-leaf-ed823780-b098-440a-ba32-1651b34b201a.json  @muni-town-leaf-storage-deno-fs-27cf4489-b637-47ad-b80b-9333cb46ffe8.json  @muni-town-leaf-storage-deno-fs-7b14a0f8-46e0-4087-8599-50851599af5e.json  @muni-town-leaf-storage-deno-fs-d3e3cb83-c401-4bc3-8eed-1792e8926dcf.json  @muni-town-leaf-storage-deno-kv-43a2ca1d-fa25-4719-8f59-f8fdcfd34372.json  @muni-town-leaf-storage-deno-kv-8a5d057e-bac9-4a2d-ac8d-98cf3b6ef0e0.json  @muni-town-leaf-storage-deno-kv-d6319d5e-b690-4e5b-bac2-7b5e60ad2ffe.json  @muni-town-leaf-storage-indexeddb-c1b3c46e-837b-4503-8af1-2de419d34fe8.json  @muni-town-leaf-storage-indexeddb-d6842481-c2e5-45bb-a1e5-9e1138925e25.json  @muni-town-leaf-storage-indexeddb-e98de18f-ce3a-41ab-8ebf-fdcba74e2fd6.json  @muni-town-leaf-storage-node-fs-791ae405-14b7-46db-8e46-811df1a7c18d.json  @muni-town-leaf-svelte-2d499900-c7d4-4887-b851-038f530f56f3.json  @muni-town-leaf-svelte-8f55ecf9-9050-45f2-9c00-286da4798d7c.json  @muni-town-leaf-svelte-c4d1005c-8631-4e3d-bd85-24a1c9c476f8.json  @muni-town-leaf-svelte-c846971a-d168-4543-bb62-c85d9d48f424.json  @muni-town-leaf-sync-socket-io-client-a77f1ed8-01a3-436f-ace6-305881545beb.json  @muni-town-leaf-sync-socket-io-client-bcd19d36-a716-4d18-84e3-612125972f53.json  @muni-town-leaf-sync-socket-io-client-c70805b3-ae59-4396-b953-0722a5cc6907.json  @muni-town-leaf-sync-socket-io-server-3b784e87-e136-4daf-a809-33b6703439e8.json  @muni-town-leaf-sync-socket-io-server-740f34f2-3ee3-4d2e-8167-a666cbacb0bd.json  @muni-town-leaf-sync-socket-io-server-e403644b-70c6-459f-a339-4d6460ea775c.json  @muni-town-leaf-sync-ws-47270c21-0723-4e52-9bb7-8975cdb94900.json  @muni-town-leaf-sync-ws-96c4d476-4e7a-4cd5-ac2b-2d82c1b68031.json  @muni-town-leaf-sync-ws-ce6aaaf2-b3af-4783-9dac-28d65685daa9.json  @repo-tsconfig-16f9f9e7-9f2d-4dae-8c0e-9e6a27fb6e59.json
clients/leaf-client-rust/: Cargo.toml  PHASE2_COMPLETE.md  PROGRESS.md  QUICKSTART.md  README.md
clients/leaf-client-rust/benches/: cbor_bench.rs
clients/leaf-client-rust/examples/: cbor_demo.rs  client_demo.rs
clients/leaf-client-rust/src/: client.rs  codec.rs  error.rs  lib.rs  types.rs
clients/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
clients/typescript/cli/: README.md  index.ts  utils.ts
clients/typescript/cli/commands/: create-stream.ts  list-streams.ts  query.ts  send-events.ts  stream-info.ts  unreads.ts
clients/typescript/src/: codec.ts  index.ts
clients/typescript/test/: test-connection.ts
compose/: grafana-datasources.yaml
contrib/: README.md
contrib/podman-in-podman/: README.md  compose.yaml
docs/: README.md  changelog.md  examples.md  tsconfig.json  typedoc.json
docs/examples/: basicComponents.md
docs/types/: extra.d.ts
examples/: basicComponents.ts  basicPeer.ts  basicStorage.ts  components.ts  garbageCollectEntities.ts  localSuperPeer.ts  localSuperPeerBinaryAdapter.ts  memorySync.ts  migrateDenokvSmallToBlobAdapter.ts  migrateDenokvToDenoKvToolbox.ts  openAndClose.ts  websocketClient.ts
explorer/: eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js
explorer/src/: app.html  hooks.client.ts
explorer/src/lib/: utils.ts
explorer/src/lib/components/: EventList.svelte
explorer/src/lib/workers/: backendWorker.ts  index.ts  oauth.ts  workerMessaging.ts
explorer/src/routes/: +layout.svelte  +page.svelte
explorer/src/routes/[[tab]]/: +page.svelte
explorer/src/routes/oauth/callback/: +page.svelte
explorer/static/: oauth-client.json
leaf-cli/: Cargo.toml
leaf-cli/example/: .gitignore  params.json  stream.toml
leaf-cli/src/: main.rs
leaf-module-sdk/: Cargo.toml
leaf-module-sdk/src/: lib.rs
leaf-server/: Cargo.toml
leaf-server/src/: async_oncelock.rs  cli.rs  did.rs  error.rs  http.rs  iggy.rs  main.rs  otel.rs  schema.sql  serde.rs  storage.rs  stream.rs  streams.rs  unreads.rs  unreads_materializer.rs  unreads_schema.sql  wasm.rs
leaf-server/src/http/: connection.rs
leaf-server/src/schema/: schema_00.sql
leaf-server/src/storage/: conn_lock.rs  conv.rs  convert.rs
leaf-stream/: Cargo.toml  README.md
leaf-stream-types/: Cargo.toml
leaf-stream-types/src/: lib.rs
leaf-stream/src/: drisl_extract.rs  encoding.rs  lib.rs  module.rs  modules.rs  scale.rs  streamdb_schema_00.sql
leaf-stream/src/module/: basic.rs
leaf-stream/src/modules/: lua.rs  wasm.rs
leaf-utils/: Cargo.toml
leaf-utils/src/: convert.rs
modules/.cargo/: config.toml
modules/example-module/: Cargo.toml
modules/example-module/src/: lib.rs
modules/multi-author-private-read-admin-upgrades/: Cargo.toml
modules/multi-author-private-read-admin-upgrades/src/: lib.rs
modules/personal/: Cargo.toml  README.md
modules/personal/src/: lib.rs
modules/public-read-write-admin-upgrade/: Cargo.toml  README.md
modules/public-read-write-admin-upgrade/src/: lib.rs
modules/single-author-public-read-no-upgrades/: Cargo.toml
modules/single-author-public-read-no-upgrades/src/: lib.rs
plans/: unread-tracking-system-design.md
src/: index.ts  leaf.test.ts  leaf.ts  storage.ts  svelte.ts  sync1.ts  tsconfig.json  typedoc.json
src/storage/: deno-fs.ts  deno-kv-toolbox.ts  deno-kv.ts  indexed-db.ts
src/sync1/: proto.ts  ws-client.ts  ws-server.ts
src/types/: extra.d.ts
