[workspace]
resolver = "3"
members = [
    "leaf-stream",
    "leaf-utils",
    "leaf-module-sdk",
    "leaf-server",
    "modules/*",
    "leaf-stream-types",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/muni-town/leaf"
license = "PolyForm-Noncommercial-1.0.0"
description = "Leaf protocol"

[profile.release]
lto = 'thin'
