[workspace]
resolver = "3"
members = [
    "leaf-stream",
    "leaf-utils",
    "leaf-server",
    "leaf-stream-types",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/muni-town/leaf"
license = "PolyForm-Noncommercial-1.0.0"
description = "Leaf protocol"

[workspace.dependencies]
libsql = { git = "https://github.com/zicklag/libsql.git", branch = "leaf" }
dasl = { git = "https://github.com/zicklag/dasl.git", branch = "fork/leaf" }
atproto-plc = { git = "https://tangled.org/zicklag.dev/atproto-plc", branch = "fix/did-generation-and-signatures"}

[profile.release]
lto = 'thin'
debug = 'line-tables-only'
