[package]
name = "leaf-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
blake3 = { version = "1.8.2", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
leaf-stream = { path = "../leaf-stream" }
salvo = { version = "0.83.0", features = ["anyhow"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }
