[package]
name = "leaf-module-sdk"
version = "0.1.0-alpha.1"

description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
leaf-stream-types = { path = "../leaf-stream-types" }
anyhow = "1.0.99"
mini-alloc = { git = "https://github.com/OffchainLabs/mini-alloc.git" }
