[package]
name = "leaf"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
# Event Streaming
iggy = "0.7.0"

# Web Server & Socket.io
salvo = { version = "0.82.0", features = ["tower-compat", "logging"] }
socketioxide = { version = "0.17.2", features = ["tracing", "msgpack", "v4"] }

# Async
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.31"

# CLI
clap = { version = "4.5.45", features = ["derive", "env"] }

# Error Handling
anyhow = "1.0.99"

# Tracing, Metrics, and Logging
tracing = "0.1.41"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = "0.30.0"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.19"
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.6", features = ["cors"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
sea-query = "0.32.7"
libsql = "0.9.21"
atproto-oauth = "0.11.2"
atproto-identity = "0.11.2"
reqwest = { version = "0.12.23", features = [
    "rustls-tls-native-roots",
    "system-proxy",
], default-features = false }
wasmer = "6.0.1"
serde_json = "1.0.143"
blake3 = "1.8.2"
hex = "0.4.3"
