[package]
name = "leaf-server"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
# Leaf
leaf-stream = { path = "../leaf-stream" }
leaf-utils = { path = "../leaf-utils" }

# Utils
weak-table = "0.3.2"

# Web Server & Socket.io
salvo = { version = "0.82.0", features = ["tower-compat", "logging"] }
socketioxide = { version = "0.17.2", features = ["tracing", "msgpack", "v4"] }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.6", features = ["cors"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
reqwest = { version = "0.12.23", features = [
    "rustls-tls-native-roots",
    "system-proxy",
], default-features = false }

# Async
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
futures-util = "0.3.31"

# CLI
clap = { version = "4.5.45", features = ["derive", "env"] }

# Error Handling
anyhow = "1.0.99"

# Tracing, Metrics, and Logging
tracing = "0.1.41"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = "0.30.0"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.19"

# Storage
libsql = { version = "0.9.21", default-features = false, features = ["core"] }

# Authentication
atproto-oauth = "0.11.2"
atproto-identity = "0.11.2"


# Formats & Serialization
serde_json = "1.0.143"
blake3 = { version = "1.8.2" }
hex = "0.4.3"
bytes = "1.10.1"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
ulid = { version = "1.2.1", features = ["serde"] }
base64 = "0.22.1"
