[package]
name = "leaf-server"
version = "0.1.0-alpha.1"

description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "leaf"
path = "src/main.rs"

[dependencies]
# Leaf
leaf-stream = { version = "0.1.0-alpha.1", path = "../leaf-stream" }
leaf-utils = { version = "0.1.0-alpha.1", path = "../leaf-utils" }

# Utils
weak-table = "0.3.2"
rand = "0.9.2"

# Web Server & Socket.io
salvo = { version = "0.82.0", features = ["tower-compat", "logging"] }
socketioxide = { version = "0.17.2", features = ["tracing", "msgpack", "v4"] }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.6", features = ["cors"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
reqwest = { version = "0.12.23", features = [
    "rustls-tls-native-roots",
    "system-proxy",
], default-features = false }

# Async
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
futures-util = "0.3.31"

# CLI
clap = { version = "4.5.45", features = ["derive", "env"] }

# Error Handling
anyhow = "1.0.99"

# Tracing, Metrics, and Logging
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2.10"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = "0.30.0"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.19"

# Storage
libsql.workspace = true

# Authentication
atproto-oauth = "0.11.2"
atproto-identity = "0.11.2"


# Formats & Serialization
serde_json = "1.0.143"
blake3 = { version = "1.8.2" }
bytes = "1.10.1"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
ulid = { version = "1.2.1", features = ["serde"] }
async-lock = "3.4.1"
futures = "0.3.31"
s3-simple = { version = "0.6.0", default-features = false }
flate2 = "1.1.2"
