[package]
name = "leaf-stream-types"
version = "0.1.0-alpha.1"

description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8.2"
ordered-float = "5.1.0"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }
thiserror = "2.0.16"
