[package]
name = "leaf-stream-types"
version = "0.1.0-alpha.1"

description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
atproto-plc.workspace = true
dasl.workspace = true
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.16"
