[package]
name = "leaf-stream"
version = "0.1.0-alpha.0"
edition = "2024"

[features]
default = ["module-wasm"]
module-wasm = ["dep:wasmtime"]

[dependencies]
# Leaf
leaf-utils = { path = "../leaf-utils" }
leaf-stream-types = { path = "../leaf-stream-types" }

# Database
libsql = { version = "0.9.21", features = ["core"], default-features = false }

# Error handling
thiserror = "2.0.16"
anyhow = "1.0.99"

# Data & encoding
blake3 = "1.8.2"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }
ulid = "1.2.1"

# Logging
tracing = "0.1.41"

# Module backends
wasmtime = { version = "36.0.2", optional = true, features = [
    "cranelift",
    "runtime",
    "parallel-compilation",
    "std",
    "async",
], default-features = false }
async-broadcast = "0.7.2"
async-channel = "2.5.0"
async-lock = "3.4.1"
futures = "0.3.31"
