[package]
name = "leaf-stream"
version = "0.1.0-alpha.1"

description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
#module-wasm = ["dep:wasmtime"]

[dependencies]
# Leaf
leaf-utils = { version = "0.1.0-alpha.1", path = "../leaf-utils" }
leaf-stream-types = { version = "0.1.0-alpha.1", path = "../leaf-stream-types" }

# Database
libsql.workspace = true

# Error handling
thiserror = "2.0.16"
anyhow = "1.0.99"

# Data & encoding
ulid = "1.2.1"
regex = "1.12.2"
peg = "0.8.5"
dasl.workspace = true
atproto-plc = "0.2.0"

# Logging
tracing = "0.1.41"

# Async
async-channel = "2.5.0"
async-lock = "3.4.1"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Module backends
# wasmtime = { version = "36.0.2", optional = true, features = [
#     "cranelift",
#     "runtime",
#     "parallel-compilation",
#     "std",
#     "async",
# ], default-features = false }
