[package]
name = "leaf-client-rust"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "macros"] }
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CBOR encoding/decoding
ciborium = "0.2"

# Socket.IO client
rust_socketio = { version = "0.6.0", features = ["async"] }

# MessagePack (to match server's Socket.IO parser)
rmpv = { version = "1.3", features = ["with-serde"] }
rmp-serde = "1.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Utilities
bytes = "1.10"
serde_bytes = "0.11"

[[bench]]
name = "cbor_bench"
harness = false
